Add 'Boosted mod' missing comment
Signed-off-by: Isabelle Chanclou <isabelle.chanclou@orange.com>

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -416,7 +416,7 @@ $blockquote-letter-spacing:   -.015625rem !default; // Boosted mod
 $hr-border-color:             $gray-300 !default;
 $hr-border-width:             $border-width * .5 !default;
 
-$mark-padding:                0 .2em !default;
+$mark-padding:                0 .2em !default; // Boosted mod
 
 $dt-font-weight:              $font-weight-bold !default;
 
